feat(updates,events): Streamline update state changes into one event type only (#27)
Reviewed-on: https://git.myservermanager.com/varakh/upda/pulls/27
Co-committed-by: Varakh <varakh@varakh.de>
